@@ -1,3 +1,4 @@
+Jerin Philip <jerin.philip@students.iiit.ac.in>
 Jerin Philip <monu1618@gmail.com>
 Vasudev Kamath <copyninja@users.noreply.github.com>
 Vasudev Kamath <vasudev@copyninja.info>
