@@ -2,6 +2,36 @@ import argparse
 import json
 from sandhisplitter.model import Model
 from sandhisplitter.postprocessor import PostProcessor
+from sandhisplitter.util import extract, compress
+from operator import add
+
+
+def split_error(desired, obtained):
+    pass
+
+
+def location_error(desired, obtained, length):
+    # Set difference(A, B) = A - B
+    # Set intersection(A, B) = A & B
+    ds, os = map(set, [desired, obtained])
+    u = set(range(1, length-1))
+    true_positives = ds & os
+    true_negatives = (u - ds) & (u - os)
+    false_positives = os - ds
+    false_negatives = (u - os) - (u - ds)
+    output = (true_positives, true_negatives,
+              false_positives, false_negatives)
+    return map(len, output)
+
+
+def measures(location_metric):
+    tp, tn, fp, fn = map(float, location_metric)
+    result = {}
+    result["Precision"] = tp/(tp+fp)
+    result["Recall"] = tp/(tp+fn)
+    result["Accuracy"] = (tp+tn)/(tp+tn+fp+fn)
+    result["True Negative Rate"] = tn/(tn+fp)
+    return result
 
 if __name__ == '__main__':  # pragma: no cover
     parser = argparse.ArgumentParser(description="Test a model")
@@ -25,15 +55,21 @@ if __name__ == '__main__':  # pragma: no cover
     P = PostProcessor()
     output = args.split
     no_splits = args.unsplit
+    stats = (0, 0, 0, 0)
     for line in args.testfile:
         line = line.strip()
-        line_orig = line
-        sps = M.probable_splits(line)
+        word, desired_splits, desired_locs = extract(line)
+        sps = M.probable_splits(word)
         splits = P.split(line, sps)
-        outstring = line_orig + '='
-        outstring += '+'.join(splits) + '|'
-        outstring += ','.join(map(str, sps))
+        outstring = compress(word, splits, sps) + '\n'
+        split_metrics = split_error(desired_splits, splits)
+        location_metrics = location_error(desired_locs, sps, len(word))
+        stats = map(add, stats, location_metrics)
         if sps:
-            output.write(outstring + '\n')
+            output.write(outstring)
         else:
-            no_splits.write(outstring + '\n')
+            no_splits.write(outstring)
+    results = measures(stats)
+    print("Split point identification stats:")
+    for key in results.keys():
+        print('  ', key, ':', results[key])
